<resources>
    <string name="apellidos">Apellidos</string>
    <string name="app_name">i-Croqueta</string>
    <string name="atr_s">Atrás</string>
    <string name="carrito">Carrito</string>
    <string name="closeToolbar">Se cierra el menu lateral</string>
    <string name="contrasena">Contraseña</string>
    <string name="correo">Correo</string>
    <string name="entrar">Entrar</string>
    <string name="finalizar_compra">Finalizar compra</string>
    <string name="gluten">Sin gluten</string>
    <string name="header_email">icroqueta@gmail.com</string>
    <string name="header_telefono_contacto">Tlf: 950 22 22 22</string>
    <string name="ingrediente_acelgas">Acelgas</string>
    <string name="ingrediente_bacalao">Bacalao</string>
    <string name="ingrediente_brocoli">Brocoli</string>
    <string name="ingrediente_cerdo">Cerdo</string>
    <string name="ingrediente_chocolate">Chocolate</string>
    <string name="ingrediente_fresa">Fresa</string>
    <string name="ingrediente_garbanzos">Garbanzos</string>
    <string name="ingrediente_naranja">Naranja</string>
    <string name="ingrediente_patata">Patata</string>
    <string name="ingrediente_pollo">Pollo</string>
    <string name="ingrediente_queso">Queso</string>
    <string name="ingrediente_quinoa">Quinoa</string>
    <string name="ingrediente_salmon">Salmón</string>
    <string name="ingrediente_ternera">Ternera</string>
    <string name="ingrediente_vainilla">Vainilla</string>
    <string name="ingrediente_vegetariano">Vegetarianas</string>
    <string name="lactosa">Sin lactosa</string>
    <string name="login_texto_pass">¿Ha olvidado su contraseña?</string>
    <string name="logo_descripcion">Logo de iCroqueta</string>
    <string name="menu_cerrarsession">Cerrar sesión</string>
    <string name="menu_mi_historial">Mi historial</string>
    <string name="menu_opciones">Opciones</string>
    <string name="menu_pedidos_activos">Pedidos activos</string>
    <string name="menu_reparto">Mapa de repartos</string>
    <string name="nombre">Nombre</string>
    <string name="openToolbar">Se abre el menu lateral</string>
    <string name="producto">Producto</string>
    <string name="registrarse">Registrarse</string>
    <string name="descripcion_boton_menos">Botón para quitar una unidad de croqueta</string>
    <string name="descripcion_boton_mas">Botón para añadir una unidad de croqueta</string>
    <string name="ingredientes">Ingredientes</string>
    <string name="nif">Nif</string>
    <string name="cancelar_pedido">Cancelar pedido</string>
    <string name="sin_entregar">Sin entregar</string>
    <string name="entregado">Entregado</string>
    <string name="a_adir_al_carro">Añadir al carro</string>
    <string name="tel_fono">Teléfono</string>
    <string name="direcci_n">Dirección</string>
    <string name="localidad">Localidad</string>
    <string name="c_digo_postal">Código Postal</string>
    <string name="tarjeta">Tarjeta</string>
    <string name="mm_aa">mm/aa</string>
    <string name="guardar_cambios">Guardar cambios</string>
    <string name="borrar_cuenta">Borrar cuenta</string>
    <string name="title_activity_maps">Map</string>
    <plurals name="disponibilidad">
        <item quantity="one" formatted="true">%d disponible</item>
        <item quantity="other" formatted="true">%d disponibles</item>
    </plurals>
    <string name="noPuedeAgregar">No puede añadir más unidades de este producto</string>
     <string name="recordar_estos_datos">Recordar estos datos</string>
    <string name="recu_rdame">Recuérdame</string>
    <string name="esto_es_por_seguridad">esto es por la seguridad de sus datos</string>
    <string name="pagar">Pagar</string>
    <string name="cvc">CVC</string>
    <string name="n_m_puerta">Núm.Puerta</string>
    <string name="portal">Portal</string>
    <string name="precio_unidad">Precio unidad:</string>
    <string name="cantidad">Cantidad:</string>
    <string name="productos">Productos:</string>
    <string name="importe_total">Importe total:</string>
</resources>