<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorBackground">
    <item android:title="@string/ingredientes">
        <menu>
            <group>
                <item
                    android:title="@string/lactosa"
                    app:actionLayout="@layout/menulateral_layout" />
                <item
                    android:title="@string/gluten"
                    app:actionLayout="@layout/menulateral_fragment" />
                <item
                    android:title="@string/ingrediente_vegetariano"
                    app:actionLayout="@layout/menulateral_fragment" />
            </group>

            <group>
                <item
                    android:title="@string/ingrediente_pollo"
                    app:actionLayout="@layout/menulateral_fragment" />
                <item
                    android:title="@string/ingrediente_cerdo"
                    app:actionLayout="@layout/menulateral_fragment" />
                <item
                    android:title="@string/ingrediente_ternera"
                    app:actionLayout="@layout/menulateral_fragment" />
            </group>

            <group>
                <item
                    android:title="@string/ingrediente_salmon"
                    app:actionLayout="@layout/menulateral_fragment" />
                <item
                    android:title="@string/ingrediente_bacalao"
                    app:actionLayout="@layout/menulateral_fragment" />
            </group>

            <group>
                <item
                    android:title="@string/ingrediente_queso"
                    app:actionLayout="@layout/menulateral_fragment" />
            </group>

            <group>
                <item
                    android:title="@string/ingrediente_brocoli"
                    app:actionLayout="@layout/menulateral_fragment" />
                <item
                    android:title="@string/ingrediente_acelgas"
                    app:actionLayout="@layout/menulateral_fragment" />
                <item
                    android:title="@string/ingrediente_quinoa"
                    app:actionLayout="@layout/menulateral_fragment" />
                <item
                    android:title="@string/ingrediente_garbanzos"
                    app:actionLayout="@layout/menulateral_fragment" />
                <item
                    android:title="@string/ingrediente_patata"
                    app:actionLayout="@layout/menulateral_fragment" />
            </group>
            <include layout="@layout/menulateral_fragment" />
        </menu>

    </item>
</menu>
